feat: add preprocess_owt and working on eqx gpt2

--- a/environment.yml
+++ b/environment.yml
@@ -51,7 +51,7 @@ dependencies:
   - tiktoken
 
   # # pytorch with specific CUDA version
-  # - conda-forge::pytorch=*=*cuda*
+  - conda-forge::pytorch=*=*cuda* # torch data loader is useful
   # - conda-forge::torchvision=*=*cuda*
   # - pytorch::torchtriton
   # - conda-forge::flash-attn
