fix: remove .trunk to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # ignore all files that's not source code
 # files should not be uploaded to GitHub, etc
-.idea
-checkpoints/*
-data/*
-!data/*/
-data/*/*
-logs/*
-wandb/
+/.idea/
+/.trunk/
+/checkpoints/*
+/data/*
+!/data/*/
+/data/*/*
+/logs/*
+/wandb/
 
 *.zip
 *.csv
