--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ target-version = "py314"
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
-ignore = []
+ignore = [
+  "F722", # Ignore complaining about jaxtyping
+]
 
 [tool.ruff.lint.isort]
 known-first-party = ["evagpt"]
